fix user title alignment

--- a/apps/fishing-map/features/workspace/common/Title.module.css
+++ b/apps/fishing-map/features/workspace/common/Title.module.css
@@ -1,4 +1,5 @@
 .titleSpan {
   display: flex;
   align-items: center;
+  justify-content: flex-start;
 }
